# ilyasov31

skypro_hw31/: conftest.py  db.sqlite3  factories.py  pyproject.toml  pytest.ini
skypro_hw31/ads/: models.py  permissions.py  serializers.py  views.py
skypro_hw31/ads/migrations/: 0001_initial.py  0002_initial.py
skypro_hw31/ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
skypro_hw31/avito/: settings.py  urls.py
skypro_hw31/datasets/: ad.json  csv_to_json.py  location.json  user.csv  user.json
skypro_hw31/tests/: test_ads.py  test_selections.py
skypro_hw31/users/: admin.py  models.py  serializers.py  urls.py  views.py
skypro_hw31/users/migrations/: 0001_initial.py
